--- a/Exercicios/desafio_12/estilos/style.css
+++ b/Exercicios/desafio_12/estilos/style.css
@@ -63,6 +63,11 @@ section {
     padding-left: 30px;
     
 }
+section > p {
+    padding-bottom: 2em;
+    
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -70,11 +75,28 @@ section.normal {
 section.imagem {
     background-color: rgb(56, 54, 54);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.397);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.233);
-} 
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.438);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position:right center;
+    
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
+}
+
+
+
 footer {
     background-color: black;
     color:white;
