menu  flexbox com media query

--- a/Exercicios/Ex030-MenuFlexBox/estilos/style.css
+++ b/Exercicios/Ex030-MenuFlexBox/estilos/style.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
+
+ 
+
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box; /* faz o elemento manter largura/altura total incluindo conteúdo, padding e borda.*/
 }
 body {
@@ -10,18 +13,47 @@ body {
     font-size: 1em;
     background-color: lightgray;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
 }
 header {
     background-color: gray;
     color: white;
     padding: 10px;
+
+    display: flex;
+    flex-flow:row wrap ;
+    justify-content: space-between;
+    align-items: center;
+    
 }   
 header > h1 {
     border: 1px dotted black;
+    flex: 0 0 200px;
 }
 header > nav {
     border: 1px dotted black;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    
+}
+header > nav > a {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+
+
+
+}
+header > nav > a:hover {
+    background-color: white;
+    color: black;
+    transition: background-color .5s;
 }
 main {
     background-color: white;
